--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@neondatabase/serverless": "^1.0.2",
     "@supabase/supabase-js": "^2.88.0",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.4",
