--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,13 @@
 # Also add to Vercel Environment Variables!
 
 VITE_NEON_DATABASE_URL=your_neon_database_url_here
+
+# Google OAuth
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
+
+# Email Service (Gmail)
+VITE_EMAIL_USER=your_gmail_address@gmail.com
+VITE_EMAIL_PASSWORD=your_gmail_app_password
+
+# App URL
+VITE_APP_URL=http://localhost:5173
