--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # Neon PostgreSQL Database
-# Copy this to .env and fill with your actual values
-# Also add to Vercel Environment Variables!
-
-VITE_NEON_DATABASE_URL=your_neon_database_url_here
+VITE_NEON_DATABASE_URL=postgresql://user:password@host/database?sslmode=require
 
 # Google OAuth
 VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
 
-# Email Service (Gmail)
-VITE_EMAIL_USER=your_gmail_address@gmail.com
-VITE_EMAIL_PASSWORD=your_gmail_app_password
+# Resend Email Service
+VITE_RESEND_API_KEY=re_your_api_key_here
 
-# App URL
-VITE_APP_URL=http://localhost:5173
+# App URL (for email links)
+APP_URL=http://localhost:5173
+
+# For development only (not needed on Vercel)
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password_here
