--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-resizable-panels": "^4.0.7",
     "react-router-dom": "^7.11.0",
     "remark-gfm": "^4.0.1",
+    "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
