--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "presuniv-learning-hub",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.6.0-beta.1",
   "type": "module",
   "scripts": {
     "dev": "concurrently \"vite\" \"nodemon email-server.js\"",
@@ -17,6 +17,8 @@
     "@monaco-editor/react": "^4.7.0",
     "@neondatabase/serverless": "^1.0.2",
     "@react-oauth/google": "^0.12.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.88.0",
     "@tailwindcss/typography": "^0.5.19",
     "bcryptjs": "^3.0.3",
@@ -39,7 +41,8 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "resend": "^6.6.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
