--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^12.23.26",
     "glob": "^13.0.0",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.561.0",
     "mermaid": "^11.12.2",
     "nodemailer": "^7.0.12",
